@@ -5,6 +5,7 @@
 - Made ThymeleafView return the default content type in getContentType() even if setContentType()
   has not been called before. This allows compatibility with the ContentNegotiatingViewResolver
   view resolver appeared in Spring 3.0.
+- Improved javadoc for ThymeleafViewResolver and ThymeleafView.
 
 
 2.0.4
